--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
-    <string name="app_name">Ml_6</string>
+    <string name="app_name">Срочно Cash - займы онлайн</string>
+
+    <string name="loans">Займы</string>
+    <string name="cards">Карты</string>
+    <string name="credits">Кредиты</string>
+    <string name="amount">Суммы:</string>
+    <string name="bet">Ставка:</string>
+    <string name="term">Срок:</string>
+    <string name="credit">Кредитные</string>
+    <string name="debit">Дебетовые</string>
+    <string name="installment">Рассрочка</string>
+    <string name="rules">Пользовательское соглашение</string>
+    <string name="checkout">Оформить</string>
+
 </resources>
