--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,9 @@
     <string name="rules">Пользовательское соглашение</string>
     <string name="checkout">Оформить</string>
 
+    //No Internet
+    <string name="not_connect">Нет соединения</string>
+    <string name="try_internet">Проверьте интернет-соединение\nи попробуйте ещё раз</string>
+    <string name="reconnect">Переподключиться</string>
+
 </resources>
